<b>New:</b>
<br></br><br></br>
- GUI makeover! Better on the eyes and easier to find settings
<br></br><br></br>
- Added a Starting Items tab to toggle which items to start with
<br></br><br></br>
- Witch is now randomized
<br></br><br></br>
- Shuffled Powder (This setting behaves like Shuffled Bombs)
<br></br><br></br>
- Shuffled Dungeons (only randomizes front entrances, glitches not included)
<br></br><br></br>
- Bad Pets (Companions will follow you inside dungeons, no logic currently)
<br></br><br></br>
- New implementation of Randomized Music, results in smaller output sizes
<br></br><br></br>
- Owl Statue locations added to the toggleable locations tab
<br></br><br></br>
- Color Dungeon Blue Rupees added to the toggleable locations tab
<br></br><br></br>
- Visible items will now trigger the Seashell Sensor, disguised traps will not
<br></br><br></br>
- Chest Sizes tweaks
<br></br><br></br>
- Enemizer tweaks
<br></br><br></br><br></br>

<b>Bug Fixes:</b>
<br></br><br></br>
- Fixes duplicate Golden Leaves
<br></br><br></br>
- Fixes message text on Heart Pieces and Golden Leaves